# jsignal

./: README.md  pyproject.toml
jsignal/: __init__.py  _types.py  signals.py  signals.pyi
jsignal/tests/: test_signal.py
